fixed double scroll issue for mobile

--- a/src/Home.css
+++ b/src/Home.css
@@ -125,8 +125,8 @@ body {
 
 @media (max-width: 600px) {
   .home-container {
-    height: 95vh;
-    padding-top: 20px; /* Optional: Add some top padding for aesthetics */
+    height: 90vh;
+    padding-top: 0px; /* Optional: Add some top padding for aesthetics */
   }
 
   .typewriter {
